--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -132,7 +132,10 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ioa-zU-vcT">
-                                            <rect key="frame" x="10" y="8" width="355" height="21"/>
+                                            <rect key="frame" x="10" y="8" width="355" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="afN-H9-3s9"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -160,10 +163,14 @@
                                 <segue destination="NCm-oP-OWe" kind="show" id="Xak-Q6-h3x"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Settings" id="3Wr-s2-xhe" userLabel="Settings"/>
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="3Wr-s2-xhe" userLabel="Settings">
+                            <connections>
+                                <action selector="SettingsBtn:" destination="mwM-QK-aOh" id="xuw-iR-YYG"/>
+                                <segue destination="Dd4-P5-WF2" kind="show" id="AGT-g3-f7L"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="Dd4-P5-WF2" kind="show" identifier="ShowSettings" id="FjT-lk-NMe"/>
                         <segue destination="NCm-oP-OWe" kind="show" identifier="JoinRoom" id="8LB-Yb-tge"/>
                     </connections>
                 </tableViewController>
@@ -323,6 +330,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rEv-Mb-B4Z"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Settings" id="qBJ-bp-uTt"/>
                     <connections>
                         <outlet property="NameField" destination="sKC-OZ-aCE" id="TUs-om-cOY"/>
                     </connections>
@@ -412,7 +420,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zGk-Lx-d4T"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="BVf-Az-hpx"/>
+                    <tabBarItem key="tabBarItem" title="Discussion" image="Discussion" selectedImage="Discussion" id="BVf-Az-hpx"/>
                     <connections>
                         <outlet property="ControlBottom" destination="rh7-8U-rsE" id="Usv-gB-Rgc"/>
                         <outlet property="MessageText" destination="rbh-re-pwJ" id="HgO-4G-kGt"/>
@@ -488,10 +496,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Discussion" width="19.200000762939453" height="19.200000762939453"/>
         <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MO6-oB-ogx"/>
+        <segue reference="AGT-g3-f7L"/>
         <segue reference="Xak-Q6-h3x"/>
     </inferredMetricsTieBreakers>
 </document>
