--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -268,6 +268,11 @@
             <objects>
                 <tabBarController definesPresentationContext="YES" id="NCm-oP-OWe" customClass="StudentTabBarController" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="Y9T-H0-60l">
+                        <barButtonItem key="leftBarButtonItem" title="Test Quiz" id="Io8-d1-WAL">
+                            <connections>
+                                <action selector="testQuiz:" destination="NCm-oP-OWe" id="W2z-Cz-Iap"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Settings" id="Jd4-Ix-oxx">
                             <connections>
                                 <segue destination="Dd4-P5-WF2" kind="show" id="MO6-oB-ogx"/>
@@ -357,7 +362,7 @@
         <!--DiscussionBoard-->
         <scene sceneID="jCB-uA-hXZ">
             <objects>
-                <viewController id="UX7-ZU-E1s" userLabel="DiscussionBoard" customClass="DiscussionBoardVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="UX7-ZU-E1s" userLabel="DiscussionBoard" customClass="DiscussionBoardVC" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fII-EU-jBi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -433,13 +438,13 @@
         <!--Discussion Messages TableVC-->
         <scene sceneID="BVk-aY-DGD">
             <objects>
-                <tableViewController id="GvW-Bm-0YA" customClass="DiscussionMessagesTableVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="GvW-Bm-0YA" customClass="DiscussionMessagesTableVC" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="47k-Mm-tfw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="548.66666666666663"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscussionCell" id="cpA-06-cTb" customClass="DiscussionMessageCell" customModule="TeacherApp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscussionCell" id="cpA-06-cTb" customClass="DiscussionMessageCell" customModule="StudentApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cpA-06-cTb" id="eV3-GG-Sda">
@@ -496,11 +501,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Discussion" width="19.200000762939453" height="19.200000762939453"/>
-        <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
+        <image name="Discussion" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="Question" width="26.666666030883789" height="29.333333969116211"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AGT-g3-f7L"/>
+        <segue reference="MO6-oB-ogx"/>
         <segue reference="Xak-Q6-h3x"/>
     </inferredMetricsTieBreakers>
 </document>
