--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -127,7 +127,7 @@
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RoomCell" id="JUm-5y-mMg" customClass="RoomCell" customModule="StudentApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JUm-5y-mMg" id="RC3-YG-waO">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JUm-5y-mMg" id="RC3-YG-waO">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
@@ -145,6 +145,7 @@
                                         <constraint firstAttribute="trailing" secondItem="Ioa-zU-vcT" secondAttribute="trailing" constant="10" id="9Z8-XU-lTQ"/>
                                         <constraint firstItem="Ioa-zU-vcT" firstAttribute="leading" secondItem="RC3-YG-waO" secondAttribute="leading" constant="10" id="Ee8-KF-Eff"/>
                                         <constraint firstItem="Ioa-zU-vcT" firstAttribute="top" secondItem="RC3-YG-waO" secondAttribute="top" constant="8" id="Jb7-Dc-NDG"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ioa-zU-vcT" secondAttribute="bottom" constant="5" id="qBu-8B-27a"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -309,7 +310,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9E-v7-Ua7">
                                         <rect key="frame" x="0.0" y="0.0" width="105" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="105" id="kDD-EK-8oQ"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="105" id="kDD-EK-8oQ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -324,6 +325,7 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Yfw-jh-L1j"/>
+                                    <constraint firstItem="F9E-v7-Ua7" firstAttribute="width" secondItem="sKC-OZ-aCE" secondAttribute="width" multiplier="0.1" priority="999" id="hJd-AK-b70"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -388,7 +390,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wIA-ui-q5B">
                                                 <rect key="frame" x="279" y="0.0" width="80" height="72.333333333333329"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="80" id="9GT-VS-FSd"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="9GT-VS-FSd"/>
                                                 </constraints>
                                                 <state key="normal" title="Send"/>
                                                 <connections>
@@ -399,6 +401,7 @@
                                         <constraints>
                                             <constraint firstItem="rbh-re-pwJ" firstAttribute="height" secondItem="gib-vD-nJZ" secondAttribute="height" id="4la-hs-Osm"/>
                                             <constraint firstItem="wIA-ui-q5B" firstAttribute="height" secondItem="gib-vD-nJZ" secondAttribute="height" id="JOi-u8-S6y"/>
+                                            <constraint firstItem="wIA-ui-q5B" firstAttribute="width" secondItem="rbh-re-pwJ" secondAttribute="width" multiplier="0.15" priority="999" id="spD-Za-fz1"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
@@ -501,11 +504,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Discussion" width="26.666666030883789" height="26.666666030883789"/>
-        <image name="Question" width="26.666666030883789" height="29.333333969116211"/>
+        <image name="Discussion" width="19.200000762939453" height="19.200000762939453"/>
+        <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MO6-oB-ogx"/>
+        <segue reference="AGT-g3-f7L"/>
         <segue reference="Xak-Q6-h3x"/>
     </inferredMetricsTieBreakers>
 </document>
