--- a/StudentApp/StudentApp/QuestionMultipleChoiceTemplate.xib
+++ b/StudentApp/StudentApp/QuestionMultipleChoiceTemplate.xib
@@ -10,7 +10,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QuestionShortAnswerTemplate" customModule="StudentApp" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QuestionMultipleChoiceTemplate" customModule="StudentApp" customModuleProvider="target">
+            <connections>
+                <outlet property="choiceA" destination="S45-qA-SoJ" id="9bE-z3-zKh"/>
+                <outlet property="choiceB" destination="9Fs-sx-hs2" id="7xU-13-RoH"/>
+                <outlet property="choiceC" destination="vL4-2f-hIc" id="7DW-lw-CTh"/>
+                <outlet property="choiceD" destination="8LX-kc-ya6" id="fZb-v4-Wea"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -20,23 +27,78 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4yf-SS-PdW">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="263"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                            <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Answer Here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h03-3p-iiT">
-                            <rect key="frame" x="16" y="752" width="382" height="66"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S45-qA-SoJ" customClass="ChoiceContentTemplate" customModule="StudentApp" customModuleProvider="target">
+                            <rect key="frame" x="16" y="279" width="382" height="123"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="offColor">
+                                    <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="onColor">
+                                    <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Fs-sx-hs2" customClass="ChoiceContentTemplate" customModule="StudentApp" customModuleProvider="target">
+                            <rect key="frame" x="16" y="418" width="382" height="122.5"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="offColor">
+                                    <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="onColor">
+                                    <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vL4-2f-hIc" customClass="ChoiceContentTemplate" customModule="StudentApp" customModuleProvider="target">
+                            <rect key="frame" x="16" y="556.5" width="382" height="123"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="offColor">
+                                    <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="onColor">
+                                    <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8LX-kc-ya6" customClass="ChoiceContentTemplate" customModule="StudentApp" customModuleProvider="target">
+                            <rect key="frame" x="16" y="695.5" width="382" height="122.5"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="offColor">
+                                    <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="onColor">
+                                    <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="h03-3p-iiT" secondAttribute="trailing" constant="16" id="Qwq-8s-9xG"/>
-                        <constraint firstItem="4yf-SS-PdW" firstAttribute="height" secondItem="vHD-p0-kCp" secondAttribute="height" multiplier="0.9" id="flt-ph-AzR"/>
-                        <constraint firstItem="h03-3p-iiT" firstAttribute="leading" secondItem="vHD-p0-kCp" secondAttribute="leading" constant="16" id="myI-vf-yWY"/>
+                        <constraint firstItem="S45-qA-SoJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vHD-p0-kCp" secondAttribute="leading" constant="16" id="0Yo-Ak-Nps"/>
+                        <constraint firstItem="8LX-kc-ya6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vHD-p0-kCp" secondAttribute="leading" constant="16" id="7Pr-at-mAn"/>
+                        <constraint firstItem="9Fs-sx-hs2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vHD-p0-kCp" secondAttribute="leading" constant="16" id="89J-aU-QgO"/>
+                        <constraint firstItem="S45-qA-SoJ" firstAttribute="centerX" secondItem="vHD-p0-kCp" secondAttribute="centerX" id="DqW-RZ-uiV"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vL4-2f-hIc" secondAttribute="trailing" constant="16" id="Ge0-8U-a5Q"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="S45-qA-SoJ" secondAttribute="trailing" constant="16" id="KDc-6m-guM"/>
+                        <constraint firstItem="9Fs-sx-hs2" firstAttribute="centerX" secondItem="vHD-p0-kCp" secondAttribute="centerX" id="KL6-BG-Itm"/>
+                        <constraint firstItem="vL4-2f-hIc" firstAttribute="centerX" secondItem="vHD-p0-kCp" secondAttribute="centerX" id="PPE-Se-lrH"/>
+                        <constraint firstItem="8LX-kc-ya6" firstAttribute="centerX" secondItem="vHD-p0-kCp" secondAttribute="centerX" id="jK4-zJ-pNh"/>
+                        <constraint firstItem="S45-qA-SoJ" firstAttribute="height" secondItem="vHD-p0-kCp" secondAttribute="height" multiplier="0.15" id="m6F-uj-3b5"/>
+                        <constraint firstItem="vL4-2f-hIc" firstAttribute="height" secondItem="vHD-p0-kCp" secondAttribute="height" multiplier="0.15" id="mTI-by-G2n"/>
+                        <constraint firstItem="9Fs-sx-hs2" firstAttribute="height" secondItem="vHD-p0-kCp" secondAttribute="height" multiplier="0.15" id="pVp-T3-F4K"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8LX-kc-ya6" secondAttribute="trailing" constant="16" id="qTq-fA-7xi"/>
+                        <constraint firstItem="8LX-kc-ya6" firstAttribute="height" secondItem="vHD-p0-kCp" secondAttribute="height" multiplier="0.15" id="usb-6Q-OQ8"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9Fs-sx-hs2" secondAttribute="trailing" constant="16" id="uy1-En-9bW"/>
+                        <constraint firstItem="vL4-2f-hIc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vHD-p0-kCp" secondAttribute="leading" constant="16" id="yjI-x8-CKx"/>
                     </constraints>
                 </stackView>
             </subviews>
