Added some default values and titles

--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -158,12 +158,7 @@
                             <outlet property="delegate" destination="mwM-QK-aOh" id="3Ad-xg-tUp"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Vqo-FV-WQ3">
-                        <barButtonItem key="leftBarButtonItem" title="Test Session" id="7dq-Lh-M7J">
-                            <connections>
-                                <segue destination="NCm-oP-OWe" kind="show" id="Xak-Q6-h3x"/>
-                            </connections>
-                        </barButtonItem>
+                    <navigationItem key="navigationItem" title="Available Rooms" id="Vqo-FV-WQ3">
                         <barButtonItem key="rightBarButtonItem" title="Settings" id="3Wr-s2-xhe" userLabel="Settings">
                             <connections>
                                 <action selector="SettingsBtn:" destination="mwM-QK-aOh" id="xuw-iR-YYG"/>
@@ -509,6 +504,5 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="AGT-g3-f7L"/>
-        <segue reference="Xak-Q6-h3x"/>
     </inferredMetricsTieBreakers>
 </document>
