Some stuff with the quizzes, but the formatting is off and I can't figure out why.
Signed-off-by: Jackson N-G <jjn58@case.edu>

--- a/StudentApp/StudentApp/QuestionMultipleChoiceTemplate.xib
+++ b/StudentApp/StudentApp/QuestionMultipleChoiceTemplate.xib
@@ -16,6 +16,7 @@
                 <outlet property="choiceB" destination="9Fs-sx-hs2" id="7xU-13-RoH"/>
                 <outlet property="choiceC" destination="vL4-2f-hIc" id="7DW-lw-CTh"/>
                 <outlet property="choiceD" destination="8LX-kc-ya6" id="fZb-v4-Wea"/>
+                <outlet property="descriptionText" destination="4yf-SS-PdW" id="cnT-re-0Zv"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
