--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -115,6 +115,29 @@
             </objects>
             <point key="canvasLocation" x="-4326" y="-78"/>
         </scene>
+        <!--QuizPageController-->
+        <scene sceneID="cQV-UO-Qm6">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="jSj-RX-ORN" userLabel="QuizPageController" customClass="QuizPageController" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NC5-LW-UDX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3022" y="-1184"/>
+        </scene>
+        <!--Quiz Question Page-->
+        <scene sceneID="eJa-Ah-3k3">
+            <objects>
+                <viewController restorationIdentifier="QuizQuestionPage" storyboardIdentifier="QuizQuestionPage" id="AVX-PM-isk" customClass="QuizQuestionPage" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SsD-wC-pcB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="iOG-Tf-a4a"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UFE-6B-7JX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2306" y="-1184"/>
+        </scene>
         <!--Available Rooms-->
         <scene sceneID="0df-Np-Zf7">
             <objects>
@@ -284,12 +307,13 @@
                         <segue destination="OP0-bE-IPH" kind="relationship" relationship="viewControllers" id="gNq-Nr-Ooj"/>
                         <segue destination="lgv-K9-CnS" kind="unwind" identifier="TeacherDisconnect" unwindAction="disconnectedFromTeacherWithSegue:" id="dJ2-fG-54d"/>
                         <segue destination="UX7-ZU-E1s" kind="relationship" relationship="viewControllers" id="3u8-Ne-vKl"/>
+                        <segue destination="jSj-RX-ORN" kind="show" identifier="ShowQuizPages" id="hyw-2D-o1G"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fHk-NS-v17" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="lgv-K9-CnS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-1206" y="-78"/>
+            <point key="canvasLocation" x="-1207" y="-78"/>
         </scene>
         <!--Settings-->
         <scene sceneID="QSx-mT-7Lb">
@@ -503,6 +527,6 @@
         <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AGT-g3-f7L"/>
+        <segue reference="MO6-oB-ogx"/>
     </inferredMetricsTieBreakers>
 </document>
